2016-12-15  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Support inserting binary blobs in KB.

	* base/kb.h (kb_item): Add length element.
	(kb_operations): Adjust functions prototypes.
	(kb_item_add_str, kb_itm_set_str): Add len parameter.

	* base/kb_redis.c (redis2kbitem_single): Add item length in string case.
	(redis_add_str, redis_set_str): Add len parameter. Adjust to handle
	binary data.

	* base/nvticache.c (nvticache_get): Adjust kb_item_add_str() calls.

	* misc/plugutils.c (plug_get_host_fqdn): Adjust plug_get_key() call.
	(plug_set_key_len, plug_replace_key_len): New functions.
	(plug_set_key, plug_replace_key): Use new functions.
	(plug_get_key): Copy memory instead of string.

	* misc/plugutils.h: Adjust functions prototypes.

	* nasl/nasl.c, nasl/nasl_builtin_find_service.c,
	nasl/nasl_builtin_openvas_tcp_scanner.c, nasl/nasl_grammar.y,
	nasl/nasl_misc_funcs.c, nasl/nasl_scanner_glue.c, nasl/nasl_ssh.c:
	Adjust function call.

2016-12-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "openvas_compress" is now in gvm-libs/util.

	* base/openvas_compress.c, base/openvas_compress.h: Removed.

	* base/CMakeLists.txt: Removed handling of this module.

	* CMakeLists.txt: Add requirement for libgvm_util.

	* nasl/CMakeLists.txt: Add libgvm_util.

	* nasl/nasl_misc_funcs.c: Changed include to gvm/util/compressutils.h.
	(nasl_gunzip): Use gvm_uncompress instead of openvas_uncompress.
	(nasl_gzip): Use gvm_compress instead of openvas_compress.

2016-12-12  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_cert.c (build_hostname_list): Remove restriction on adding
	CN values without a dot.

2016-12-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Module "settings" is now in gvm-libs.

	* base/settings.c, base/settings.h: Removed.

	* COPYING: Removed the files respectively.

	* base/CMakeLists.txt: Removed handling of this module.

	* misc/prefs.c Changed include to gvm/base/settings.h.:
